fix background transparency (broken on ios_saf 9)

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 
 .today-info {
   margin: auto;
-  background-color: #8080808c;
+  background-color: #3e434d;
   border: 1px inset;
   padding: 8px;
   border-radius: 8px;
